# job_task_artists

./: .env  .gitignore  README.md  alembic.ini  artist.py  config.py  initial_data.sql  main.py  pyproject.toml  session.py  standalone_session.py
app/: artist.py  config.py  main.py  models.py  schemas.py  session.py  standalone_session.py
app/services/: artist.py
app/utils/: db.py
migrations/: env.py
migrations/versions/: 147aad73536e_artist.py  a09bd1d7a287_first_migration_01.py
models/: artist.py
routes/: artist.py
schemas/: schemas.py
services/: artist.py
sessions/: session.py
tests/: test_routes.py
utils/: db_utils.py
