[tool.poetry]
name = "immomio"
version = "0.1.0"
description = ""
authors = ["Vasile Pop <popovvasile@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.27.0"
httpx = "^0.23.3"
alembic = "^1.9.4"
sqlalchemy = "1.4.40"
fastapi = "0.81.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
