[tool.poetry]
name = "immomio"
version = "0.1.0"
description = ""
authors = ["Vasile Pop <popovvasile@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.27.0"
httpx = "^0.23.3"
alembic = "^1.9.4"
sqlalchemy = "1.4.40"
fastapi = {extras = ["all"], version = "^0.92.0"}
uvloop = "^0.17.0"
fastapi-utils = "^0.2.1"
psycopg2 = "^2.9.5"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
